not using for final proj!

--- a/final_project.Rmd
+++ b/final_project.Rmd
@@ -5,6 +5,8 @@ date: "4/4/2019"
 output: html_document
 ---
 
+Test run with uber data - NOT USING
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
